# MagmaEngine

./: .gitignore  .gitmodules  README.md  build.zig  build.zig.zon  config.ini.in  linux_native.ini  linux_wayland_native.ini  linux_x11_native.ini  lsan_suppress.txt  meson.build  meson.options  run.sh.in  windows_cross.ini  windows_native.ini
include/: config.h  main.h
src/: main.c  main.h  main.zig  message_handler.zig  winmain.c
src/config/: argparse.c  config.c
src/modules/: module.zig
src/modules/util/: message_handler.zig
src/modules/window/: null_init.zig  null_platform.zig  platform.zig  wayland_platform.zig  window.zig  window_system.zig
src/util/: e_math.c  e_matrix_make.c  e_matrix_operations.c  e_mem_debug.c  e_noise.c  e_path.c  e_text.c  e_types.c  logger.zig  message_handler.zig
src/util/include/: util.h
zig-cache/o/0f73d231605fd94cdf2204b9c18203b6/: MagmaEngine
zig-cache/o/2275f4abd0e7b844ecc0b9af4c7661cd/: test
zig-cache/o/73366794951da3c4d5bba31da91043d2/: test
zig-cache/o/9dcb28386df170e366e5de56c837c0cc/: test
zig-cache/o/a638255dd1076e9abb543a305c9be9f5/: test
zig-cache/o/ac0c9dfdf467cab4a3df745f588c9aa9/: test
