# Debug
option('debug_crash_on_error', type : 'boolean', value : 'true', description : 'Crashes the program if any error occurs')
option('debug_memory', type : 'boolean', value : 'false', description : 'Enable memory tracking. Significantly slows program')
option('debug_graphics', type : 'boolean', value : 'false', description : 'Enable graphics debug output')

# Math
option('math_double_precision', type : 'feature', value : 'enabled', description : 'Enables double precision floating values')
